--- a/API loginPage/package.json
+++ b/API loginPage/package.json
@@ -23,8 +23,10 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.2",
